# HopfieldANN

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  License  README.md
src/: AppInfo.h  Hopfield.c  Hopfield.h  HopfieldCalc.c  HopfieldCalc.h  HopfieldConfig.h  HopfieldIO.c  HopfieldIO.h  Main.c  Makefile  main.c
test/: testAll.cpp
testScripts/: input_test_1.txt  result_test_1.txt
